# py-arkanoid

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build-windows.yml
docs/: openspec-workflow.md
docs/distribution/: linux-packaging-decision.md  manual-smoke-checklist.md
levels/: level_01.yaml  level_02.yaml  level_03.yaml  level_04.yaml  level_05.yaml
openspec/: backlog.md
openspec/changes/01-build-first-playable-arkanoid/: design.md  proposal.md
openspec/changes/02-add-levels-and-brick-types/: proposal.md  tasks.md
openspec/changes/03-add-power-ups/: proposal.md
openspec/changes/04-add-local-leaderboard/: design.md  tasks.md
openspec/changes/05-add-online-leaderboard-client/: design.md  proposal.md
openspec/changes/07-polish-arkanoid-experience/: design.md  tasks.md
openspec/changes/feature-01-build-first-playable-arkanoid/: tasks.md
openspec/changes/feature-02-add-levels-and-brick-types/: tasks.md
openspec/changes/feature-03-add-power-ups/: tasks.md
openspec/changes/feature-04-add-local-leaderboard/: tasks.md
openspec/changes/feature-05-add-distribution-builds/: design.md  proposal.md  tasks.md
openspec/changes/feature-06-add-basic-sounds/: tasks.md
openspec/changes/feature-06-add-distribution-builds/: design.md  proposal.md  tasks.md
scripts/: build_linux.sh  build_pyinstaller.py  build_windows.ps1
src/arkanoid/: __init__.py  __main__.py  pygame_app.py  resources.py  sound.py
src/arkanoid/core/: game.py  (+6 more)
tests/: test_core_game.py  test_leaderboard.py  test_pygame_app.py  test_resources.py  test_sound.py
(+82 files in other folders)
