[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "py-arkanoid"
version = "0.1.0"
description = "A first playable local Arkanoid slice built with Pygame."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame>=2.6,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
py-arkanoid = "arkanoid.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
